# school-bot

./: .env.example  .env.test.example  .gitignore  CONVENTIONS.md  Dockerfile  README.md  docker-compose.yml  proc  processors  pyproject.toml  pytest.ini  school_bot.session  school_bot.session-journal
data/: school_bot.db
src/: config.py  database.py  debug_test.py  dependencies.py  main.py
src/api/: app.py  router.py
src/bot/: bot.py
src/database/: __init__.py  enums.py  kvstore.py  models.py  repository.py  types.py
src/events/: __init__.py  attachment_handler.py  broker.py  crawl_handler.py  event_types.py  initial_crawl.py  manager.py  schedule_handler.py  scheduler.py  telegram_handler.py  types.py
src/schedule/: crawler.py  exceptions.py  handlers.py  manager.py  preprocess.py  schema.py  translations.yaml
src/telegram/: bot.py  constants.py  state.py
src/utils/: __init__.py  logging.py  network.py
tests/: conftest.py
tests/crawl/: __init__.py  conftest.py  test_crawler.py  test_pipeline.py  test_real_crawler.py  test_schedule.py  test_subject_change.py  utils.py
tests/database/: conftest.py  test_attachment_model.py  test_change_detection.py  test_kvstore.py  test_model_validations.py  test_real_data_pipeline.py  test_repository.py  test_subject_changes.py
tests/events/: test_attachment_handler.py
tests/models/: test_schema.py
tests/preprocessors/: test_announcements.py  test_attachments.py  test_dates.py  test_homework.py  test_lessons.py  test_marks.py  test_subject_cleaning.py  test_to_schedule.py  test_translation.py
(+47 files in other folders)
